validations, html and buttons work

--- a/page3.html
+++ b/page3.html
@@ -33,7 +33,7 @@
       <br>
       <div class="buttons">
         <button id="previousbutton" step="3" onclick=" backButton()">Previous</button>
-        <button id="nextbutton" step="3" onclick="nextButtons()">submit</button> 
+        <button id="nextbutton" step="3" onclick="nextButtons()">Next</button>
       </div>
     </div>
     <script src="validationsPage3.js"></script>
