--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
       <div id="hobbies"> 
         <label>Hobbies:</label>
         <br>
-        <input class="checkbox-storage" id="chess" type="checkbox" value="Chess" name="hobbies"><label for="chess">Chess</label>
+        <input class="checkbox-storage" id="chess" type="checkbox" name="hobbies" value="Chess"><label for="chess">Chess</label>
         <br>
         <input class="checkbox-storage" id="movies" type="checkbox" name="hobbies" value="Movies"><label for="movies">Movies</label>
         <br>
