--- a/page4.html
+++ b/page4.html
@@ -15,33 +15,33 @@
         <label>Are you a happy person?</label>
         <div class="child" id="happyValidation"></div>
         <p>
-           <input type="radio" name="happy" value="yes">Yes</input>
+           <input id="happy" class="radio-storage" type="radio" name="happy" value="yes">Yes</input>
         </p>
         <p>
-           <input type="radio" name="happy" value="no">No</input>
+           <input id="happy" class="radio-storage" type="radio" name="happy" value="no">No</input>
         </p>           
     </div>
     <div>
         <label>Will you do skydiving?</label>
         <div class="child" id="skydivingValidation"></div>
         <p>
-           <input type="radio" name="skydiving" value="yes">Yes</input>
+           <input id="skydiving" class="radio-storage" type="radio" name="skydiving" value="yes">Yes</input>
         </p>
         <p>
-           <input type="radio" name="skydiving" value="maybe">Maybe</input>
+           <input id="skydiving" class="radio-storage" type="radio" name="skydiving" value="maybe">Maybe</input>
         </p>           
         <p>
-            <input type="radio" name="skydiving" value="no">No</input>
+            <input id="skydiving" class="radio-storage" type="radio" name="skydiving" value="no">No</input>
          </p>    
     </div>
     <div>
         <label>Do you have 1$ in your pocket now?</label>
         <div class="child" id="dollarValidation"></div>
         <p>
-           <input type="radio" name="dollar" value="yes3">Yes</input>
+           <input id="dollar" class="radio-storage" type="radio" name="dollar" value="yes">Yes</input>
         </p>
         <p>
-           <input type="radio" name="dollar" value="no">No</input>
+           <input id="dollar" class="radio-storage" type="radio" name="dollar" value="no">No</input>
         </p>           
     </div>
     <div class="buttons">
