--- a/page5.html
+++ b/page5.html
@@ -18,8 +18,11 @@
       <div class="summary-address" id="address">Address: </div>
       <div class="summary-img" id="image"><img src="" alt=""></div>
       <div class="summary" id="hobbies">Hobbies: </div>
+      <br>
       <div class="summary" id="happy">A happy person? </div>
+      <br>
       <div class="summary" id="skydiving">Wanna skydiving? </div>
+      <br>
       <div class="summary" id="dollar">Got 1$? </div>
       <br>
       <div class="summary-button">
@@ -33,4 +36,5 @@
   <script src="inputmanager.js"></script>
   <script src="displaymanager.js"></script>
   <script src="pageredirection.js"></script>
+  <script src="buttons.js"></script>
 </html>
